# llm_spice

./: .gitignore  README.md  cli.py  lint.sh  pyproject.toml  pyrightconfig.json  setup.sh
diagram/: attention_chip.drawio  datacenter.drawio  execution.drawio  insight.drawio  llm_modeling.drawio  model.drawio  network.drawio  pd.drawio  prefill_chip.drawio  switch_insight.drawio
llm_spice/: __init__.py
llm_spice/allocator/: __init__.py  allocator.py  balance.py  brute_force.py
llm_spice/execute/: executor.py  online_workload.py  scheduler.py  workload.py
llm_spice/hardware/: __init__.py  datacenter.py  memory.py  network.py  processor.py  simd.py  technode.py
llm_spice/model/: __init__.py  deepseek_v3.py  gpt_oss.py  llama3.py  llama4.py  model.py  qwen3_moe.py  qwen3_next.py
llm_spice/op/: operators.py
llm_spice/passes/: af_transfer.py
llm_spice/utils/: __init__.py  breakdown.py  common.py  experiments.py  graph.py  registry.py  trace.py
scripts/: download_trace.py
tests/: test_allocator.py  test_allocator_optimal.py  test_continous_batching.py  test_executor.py  test_memory.py  test_memory_usage.py  test_models.py  test_moe.py  test_network.py  test_num_chips.py  test_online_workload.py  test_operators.py  test_passes.py  test_simd.py  test_tco.py  test_tensor.py  test_trace.py  test_workload.py
